// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupMenu iOS renders with 1 button 1`] = `
<TouchableIOS
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Icon
    name="moreIcon"
    style={
      Array [
        Object {
          "color": "#B2B0B2",
          "paddingHorizontal": 10,
        },
        undefined,
      ]
    }
    type="MissionHub"
  />
</TouchableIOS>
`;

exports[`PopupMenu iOS renders with icon props 1`] = `
<TouchableIOS
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Icon
    name="moreIcon"
    size={24}
    style={
      Array [
        Object {
          "color": "#B2B0B2",
          "paddingHorizontal": 10,
        },
        undefined,
      ]
    }
    type="MissionHub"
  />
</TouchableIOS>
`;
